<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context="project.kohler.com.kholer_project.Activities.Act_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/padding_mmlarge"
            app:srcCompat="@drawable/layout_set_logo" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_xlarge"
            android:layout_marginRight="@dimen/padding_xlarge"

            android:layout_marginTop="@dimen/padding_medium"
            android:layout_weight="1"
            android:background="@drawable/edit_log"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_xlarge"
            android:layout_marginRight="@dimen/padding_xlarge"
            android:layout_marginTop="@dimen/padding_medium"
            android:background="@drawable/edit_log"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_enormous"
            android:layout_marginRight="@dimen/padding_enormous"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@drawable/btn_log"
            android:foreground="@drawable/ripple_effect"
            android:minHeight="0dp"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/acceedi"
            android:textColor="@color/dark_blue" />

        <TextView
            android:id="@+id/textPsswdForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_marginLeft="@dimen/padding_enormous"
            android:layout_marginRight="@dimen/padding_enormous"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/otherwise"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_enormous"
            android:layout_marginRight="@dimen/padding_enormous"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@drawable/btn_log"
            android:foreground="@drawable/ripple_effect"
            android:minHeight="0dp"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/register"
            android:textColor="@color/dark_blue" />

    </LinearLayout>


</RelativeLayout>
