<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="project.kohler.com.kholer_project.Activities.Act_compilation_commercial">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_save_info"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:clickable="true"
                android:foreground="@drawable/ripple_effect_blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_xx_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/type_machine"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/txt_xnormal" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextTypeMachine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_infos"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:clickable="true"
                android:foreground="@drawable/ripple_effect_blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_xx_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/client"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/txt_xnormal" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_infos"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:clickable="true"
                android:foreground="@drawable/ripple_effect_blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_xx_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/type_application"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/txt_xnormal" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextTypeApplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_infos"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:clickable="true"
                android:foreground="@drawable/ripple_effect_blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_xx_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/brand"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/txt_xnormal" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_infos"
                    android:inputType="textMultiLine" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue">

        <ImageView
            android:id="@+id/image_back_compilation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_small"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24dp" />

        <TextView
            android:id="@+id/text_title_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="TITOLO"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_xnormal"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_save_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginLeft="@dimen/padding_enormous"
        android:layout_marginRight="@dimen/padding_enormous"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@drawable/btn_log_blue"
        android:foreground="@drawable/ripple_effect"
        android:minHeight="0dp"
        android:paddingBottom="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/save"
        android:textColor="@color/white" />


</RelativeLayout>
